# termforge

./: .clangd  .gitignore  AGENTS.md  CMakeLists.txt  LICENSE.md  README.md  ROADMAP.md  STATUS.md  TermForgeGameplan.md
.github/workflows/: build.yml
assets/: gradient.rgba
cmake/toolchain/: address.cmake  clang.cmake  default.cmake  thread.cmake
docs/: modal-overlays.md  pixel-regions.md
examples/: CMakeLists.txt  chat.cpp  colors.cpp  dashboard.cpp  dialogs.cpp  hello.cpp  image.cpp  input.cpp  low_level.cpp  widgets.cpp
include/: version.hpp.in.cmake
include/termforge/core/: app.hpp  image_loader.hpp  input.hpp  renderer.hpp  screen.hpp  terminal.hpp  types.hpp
include/termforge/drivers/: ansi_rgb_driver.hpp  fallback_driver.hpp  kitty_driver.hpp  terminal_driver.hpp
include/termforge/widgets/: button.hpp  dialog.hpp  dialogs.hpp  focus_ring.hpp  frame.hpp  glyphs.hpp  label.hpp  list_widget.hpp  menu_bar.hpp  progress_bar.hpp  table_widget.hpp  text_box.hpp  text_input.hpp  waveform_widget.hpp  widget.hpp
src/lib/: CMakeLists.txt  lib.cpp
src/lib/core/: app.cpp  image_loader.cpp  input.cpp  renderer.cpp  screen.cpp  terminal.cpp
src/lib/detail/: base64.cpp  base64.hpp  probe.hpp  tty_restore.hpp  utf8.hpp  width.hpp  wrap.hpp
src/lib/drivers/: ansi_rgb_driver.cpp  fallback_driver.cpp  kitty_driver.cpp  select_driver.cpp  select_driver.hpp
src/lib/widgets/: button.cpp  dialog.cpp  dialogs.cpp  focus_ring.cpp  frame.cpp  label.cpp  list_widget.cpp  menu_bar.cpp  progress_bar.cpp  table_widget.cpp  text_box.cpp  text_input.cpp  waveform_widget.cpp
test/: CMakeLists.txt  main.cpp
test/01drivers/: test.cpp
test/02screen/: test.cpp
test/03renderer/: test.cpp
test/04input/: test.cpp
test/05textbox/: test.cpp
test/06imageloader/: test.cpp
test/07base64/: test.cpp
test/08tablewidget/: test.cpp
test/09listwidget/: test.cpp
test/10waveform/: test.cpp
test/11pixelregions/: test.cpp
test/12primitives/: test.cpp
test/13mouse/: test.cpp
test/14audit/: test.cpp
test/15probe/: test.cpp
test/16signals/: test.cpp
test/17width/: test.cpp
test/18focus/: test.cpp
test/19dialogs/: test.cpp
tools/: gen_gradient.cpp  kitty_repro.sh
